tests/functor-05/out.txt
error: undefined value: x
  ┌─ err.sml:8:18
  │
8 │ val _: int = Guy.x
  │                  ^

typechecking failed
